@@ -30,4 +30,5 @@ org.jcrontab.data.datasource = org.jcrontab.data.FileSource
 #org.jcrontab.sendMail.smtp.password=yourSMTPpassword
 #Those lines defines the default Logger for the system
 org.jcrontab.log.Logger=org.jcrontab.log.jEditLogger
-#org.jcrontab.log.Log4j.Properties={$HOME}.jcrontab/log4j.props
+#org.jcrontab.log.Logger=org.jcrontab.log.Log4JLogger
+#org.jcrontab.log.Log4j.Properties={$HOME}.jcrontab/log4j.properties
